# void-script

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  TODO.md  VOIDSCRIPT_GDD_v1.2.md  bugs&issues.md  install_webview2.ps1  modding.todo  modding_guide.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: breadcrumb-function-name-missing.md  breadcrumb-function-still-broken.md  statusbar-not-visible.md  tooltip-horizontal-clip.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-css-architecture/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-title-bar/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-tab-bar-and-editor-state/: 04-01-PLAN.md  04-01-SUMMARY.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-tool-strips-and-panels/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-status-bar/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-resizable-panels/: 07-01-PLAN.md  07-01-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-UAT.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-gutter-refinements/: 08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-UAT.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-polish-and-tooltips/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-UAT.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/deadcode-app/: Cargo.toml
crates/deadcode-app/src/: app.rs  main.rs  modding.rs
crates/deadcode-app/tests/: interpreter_compiler_parity.rs
crates/deadcode-desktop/: Cargo.toml
crates/deadcode-desktop/src/: animation.rs  behavior.rs  fetch.rs  fullscreen.rs  lib.rs  renderer.rs  save.rs  tray.rs  unit.rs  window.rs
crates/deadcode-desktop/src/assets/: dog_atlas.json  skeleton_atlas.json  summoner_atlas.json
crates/deadcode-editor/: Cargo.toml  build.rs
crates/deadcode-editor/src/: embedded_assets.rs  execution.rs  ipc.rs  lib.rs  scripts.rs  tabs.rs  window.rs
crates/deadcode-lang/: Cargo.toml
crates/deadcode-lang/src/: ast.rs  environment.rs  error.rs  interpreter.rs  lib.rs  token.rs
crates/deadcode-lua/: Cargo.toml
crates/deadcode-lua/src/: api.rs  convert.rs  coroutine.rs  error.rs  lib.rs  sandbox.rs  tests.rs  triggers.rs
crates/deadcode-sim/: Cargo.toml
crates/deadcode-sim/src/: action.rs  entity.rs  error.rs  executor.rs  ir.rs  lib.rs  query.rs  rng.rs  value.rs  world.rs
crates/grimscript-app/: Cargo.toml
crates/grimscript-app/src/: app.rs  main.rs
crates/grimscript-desktop/: Cargo.toml
crates/grimscript-editor/: Cargo.toml
crates/grimscript-lang/: Cargo.toml
crates/grimscript-sim/: Cargo.toml
crates/voidscript-editor/: Cargo.toml  build.rs
crates/voidscript-editor/src/: embedded_assets.rs  execution.rs  ipc.rs  lib.rs  plugin.rs  scripts.rs  tabs.rs  window.rs
crates/voidscript-game/: Cargo.toml  build.rs
crates/voidscript-lang/: Cargo.toml
crates/voidscript-sim/: Cargo.toml
docs/: game-design-document.md  grimscript-system.md  grimscript.md  modding.md
editor-ui/: index.html  package-lock.json  package.json  vite.config.ts
editor-ui/src/: App.module.css  App.tsx  main.tsx
editor-ui/src/ipc/: types.ts  (+1 more)
mods/core/: mod.lua  mod.toml
mods/necromancer/: mod.toml
scripts/: miner_brain.vs  mothership_brain.gs  mothership_brain.vs  summoner_brain.gs
scripts/types/: grimoire.gs  main.gs  skeleton.gs  summoner.gs  unit.gs
(+78 files in other folders)
