[workspace]
members = [
    "crates/voidscript-game",
    "crates/voidscript-editor",
    "crates/voidscript-lang",
    "crates/voidscript-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
