[workspace]
members = [
    "crates/deadcode-app",
    "crates/deadcode-desktop",
    "crates/deadcode-editor",
    "crates/grimscript-lang",
    "crates/deadcode-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.30"
crossbeam-channel = "0.5"
