[package]
name = "deadcode-app"
version.workspace = true
edition.workspace = true

[dependencies]
deadcode-desktop = { path = "../deadcode-desktop" }
deadcode-editor = { path = "../deadcode-editor" }
deadcode-lang = { path = "../deadcode-lang" }
winit = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
softbuffer = "0.4"
tray-icon = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
