[package]
name = "deadcode-desktop"
version.workspace = true
edition.workspace = true

[features]
dev-mode = []

[dependencies]
winit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
softbuffer = "0.4"
tiny-skia = "0.12"
tray-icon = "0.21"
directories = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGBitmapContext", "CGColorSpace", "CGDataProvider", "CGImage", "CGContext"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CATransaction", "objc2-core-graphics"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
