[package]
name = "deadcode-editor"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
wry = "0.50"
http = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
deadcode-lang = { path = "../deadcode-lang" }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSView", "NSGraphics", "NSEvent", "NSApplication", "NSRunningApplication", "NSMenu", "NSColor"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
