[package]
name = "voidscript-editor"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wry = "0.50"
http = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
voidscript-lang = { path = "../voidscript-lang" }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSView", "NSGraphics", "NSEvent", "NSApplication", "NSRunningApplication", "NSMenu", "NSColor"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
